--- a/MusicPlayer/MusicPlayer/MainWindow.xaml
+++ b/MusicPlayer/MusicPlayer/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero" mc:Ignorable="d" x:Class="MusicPlayer.MainWindow"
-        Title="MainWindow" Height="484" Width="350" ResizeMode="CanResizeWithGrip" WindowStyle="None" AllowsTransparency="True" MaxWidth="350" MinWidth="350" MouseLeftButtonDown="Window_MouseLeftButtonDown_1" MinHeight="94" Background="{x:Null}" Loaded="Window_Loaded_1">
+        Title="MainWindow" Height="484" Width="350" ResizeMode="CanResizeWithGrip" WindowStyle="None" AllowsTransparency="True" MaxWidth="350" MinWidth="350" MouseLeftButtonDown="Window_MouseLeftButtonDown_1" MinHeight="94" Background="{x:Null}" Loaded="Window_Loaded_1" Closed="Window_Closed_1">
     <Window.Resources>
     	<ControlTemplate x:Key="HorizontalScrollBarTemplate">
 	        <ControlTemplate.TargetType>
