--- a/MusicPlayer/MusicPlayer/LoginVK.xaml
+++ b/MusicPlayer/MusicPlayer/LoginVK.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d"
         xmlns:wf="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"
-        Title="LoginVK" Height="554" Width="770">
+        Title="LoginVK" Height="554" Width="770" WindowState="Maximized">
     <Grid>
         <WindowsFormsHost>
             <wf:WebBrowser Navigated="WebBrowser_Navigated" x:Name="wb"/>
