--- a/MusicPlayer/MusicPlayer/MainWindow.xaml
+++ b/MusicPlayer/MusicPlayer/MainWindow.xaml
@@ -1628,6 +1628,35 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        <LinearGradientBrush x:Key="TextBoxBorder" EndPoint="0,20" MappingMode="Absolute" StartPoint="0,0">
+            <GradientStop Color="#ABADB3" Offset="0.05"/>
+            <GradientStop Color="#E2E3EA" Offset="0.07"/>
+            <GradientStop Color="#E3E9EF" Offset="1"/>
+        </LinearGradientBrush>
+        <Style x:Key="TextBoxStyle1" BasedOn="{x:Null}" TargetType="{x:Type TextBox}">
+            <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
+            <Setter Property="Background" Value="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"/>
+            <Setter Property="BorderBrush" Value="{StaticResource TextBoxBorder}"/>
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="Padding" Value="1"/>
+            <Setter Property="AllowDrop" Value="true"/>
+            <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type TextBox}">
+                        <themes:ListBoxChrome x:Name="Bd" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" RenderMouseOver="{TemplateBinding IsMouseOver}" RenderFocused="{TemplateBinding IsKeyboardFocusWithin}" SnapsToDevicePixels="true">
+                            <ScrollViewer x:Name="PART_ContentHost" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" Margin="0,6,0,-6"/>
+                        </themes:ListBoxChrome>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsEnabled" Value="false">
+                                <Setter Property="Background" TargetName="Bd" Value="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"/>
+                                <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Window.Resources>
     <Window.TaskbarItemInfo>
         <TaskbarItemInfo x:Name="MyTaskItem" ProgressState="Normal">
@@ -1705,7 +1734,11 @@
         </TabControl>
 
         <ToolBarPanel x:Name="InfoPanel" HorizontalAlignment="Left" Height="23"  Width="350" Background="#FF0F0F0F" VerticalAlignment="Bottom" Margin="0,0,0,36"/>
-        <ToolBarPanel x:Name="FindPanel" HorizontalAlignment="Left" Height="36"  Width="350" AllowDrop="True" Background="#FF202020" VerticalAlignment="Bottom"/>
+        <ToolBarPanel x:Name="FindPanel" HorizontalAlignment="Left" Height="36"  Width="350" AllowDrop="True" Background="#FF202020" VerticalAlignment="Bottom">
+            <Grid Height="36">
+                <TextBox x:Name="FindText" HorizontalAlignment="Left" Height="30" Margin="4,3,0,3" TextWrapping="Wrap" Text="Быстрый поиск" Width="299" VerticalAlignment="Center" FontFamily="Segoe UI Light" Background="{x:Null}" Foreground="Gray" SelectionBrush="White" FontWeight="Bold" FontSize="14" Style="{DynamicResource TextBoxStyle1}" BorderThickness="0,0,0,1" KeyDown="TextBox_KeyDown_1"/>
+            </Grid>
+        </ToolBarPanel>
         <ToolBarPanel x:Name="NavigationsPanel" HorizontalAlignment="Left" Height="94" VerticalAlignment="Top" Width="350" Background="Black">
             <Grid>
                 <Grid.RowDefinitions>
