--- a/MusicPlayer/MusicPlayer/MainWindow.xaml
+++ b/MusicPlayer/MusicPlayer/MainWindow.xaml
@@ -258,7 +258,7 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type TabItem}">
-                        <Grid SnapsToDevicePixels="true" Height="26" MinWidth="110">
+                        <Grid x:Name="grid" SnapsToDevicePixels="true" Height="26" MinWidth="110">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="94"/>
                                 <ColumnDefinition/>
@@ -276,11 +276,13 @@
                             <Trigger Property="IsMouseOver" Value="true">
                                 <Setter Property="Background" TargetName="Bd" Value="#FF1F1F1F"/>
                                 <Setter Property="BorderBrush" TargetName="Bd" Value="#FF1F1F1F"/>
+                                <Setter Property="Background" TargetName="grid" Value="#FF1F1F1F"/>
                             </Trigger>
                             <Trigger Property="IsSelected" Value="true">
                                 <Setter Property="Panel.ZIndex" Value="1"/>
                                 <Setter Property="Background" TargetName="Bd" Value="#FFBF3517"/>
                                 <Setter Property="BorderBrush" TargetName="Bd" Value="#FFBF3517"/>
+                                <Setter Property="Background" TargetName="grid" Value="#FFBE3517"/>
                             </Trigger>
                             <MultiTrigger>
                                 <MultiTrigger.Conditions>
@@ -1796,6 +1798,102 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        <Style x:Key="ButtonStyle13" TargetType="{x:Type Button}" BasedOn="{x:Null}">
+            <Setter Property="FocusVisualStyle" Value="{DynamicResource SimpleButtonFocusVisual}"/>
+            <Setter Property="Background" Value="{DynamicResource NormalBrush}"/>
+            <Setter Property="BorderBrush" Value="{DynamicResource NormalBorderBrush}"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+
+                        <!-- We use Grid as a root because it is easy to add more elements to customize the button -->
+                        <Grid x:Name="Grid">
+
+                            <Border x:Name="Border" Margin="0,1,0,-1">
+                                <Border.Background>
+                                    <ImageBrush ImageSource="Image/button1.png" Stretch="None"/>
+                                </Border.Background>
+                            </Border>
+
+                            <!-- Content Presenter is where the text content etc is placed by the control -->
+                        </Grid>
+
+                        <!--Each state sets a brush on the Border in the template -->
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsKeyboardFocused" Value="true">
+                                <Setter Property="Background" TargetName="Border">
+                                    <Setter.Value>
+                                        <ImageBrush ImageSource="Image/button2.png" Stretch="None"/>
+                                    </Setter.Value>
+                                </Setter>
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="true">
+                                <Setter Property="Background" TargetName="Border">
+                                    <Setter.Value>
+                                        <ImageBrush ImageSource="Image/button2.png" Stretch="None"/>
+                                    </Setter.Value>
+                                </Setter>
+                            </Trigger>
+                            <Trigger Property="IsPressed" Value="true"/>
+                            <Trigger Property="IsEnabled" Value="true"/>
+                            <Trigger Property="IsEnabled" Value="false">
+                                <Setter Property="Background" Value="{DynamicResource DisabledBackgroundBrush}" TargetName="Border"/>
+                                <Setter Property="BorderBrush" Value="{DynamicResource DisabledBorderBrush}" TargetName="Border"/>
+                                <Setter Property="Foreground" Value="{DynamicResource DisabledForegroundBrush}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <Style x:Key="ButtonStyle14" TargetType="{x:Type Button}" BasedOn="{x:Null}">
+            <Setter Property="FocusVisualStyle" Value="{DynamicResource SimpleButtonFocusVisual}"/>
+            <Setter Property="Background" Value="{DynamicResource NormalBrush}"/>
+            <Setter Property="BorderBrush" Value="{DynamicResource NormalBorderBrush}"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+
+                        <!-- We use Grid as a root because it is easy to add more elements to customize the button -->
+                        <Grid x:Name="Grid">
+
+                            <Border x:Name="Border" Margin="0,1,0,-1">
+                                <Border.Background>
+                                    <ImageBrush ImageSource="Image/minimayz1.png" Stretch="None"/>
+                                </Border.Background>
+                            </Border>
+
+                            <!-- Content Presenter is where the text content etc is placed by the control -->
+                        </Grid>
+
+                        <!--Each state sets a brush on the Border in the template -->
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsKeyboardFocused" Value="true">
+                                <Setter Property="Background" TargetName="Border">
+                                    <Setter.Value>
+                                        <ImageBrush ImageSource="Image/minimayz2.png" Stretch="None"/>
+                                    </Setter.Value>
+                                </Setter>
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="true">
+                                <Setter Property="Background" TargetName="Border">
+                                    <Setter.Value>
+                                        <ImageBrush ImageSource="Image/minimayz2.png" Stretch="None"/>
+                                    </Setter.Value>
+                                </Setter>
+                            </Trigger>
+                            <Trigger Property="IsPressed" Value="true"/>
+                            <Trigger Property="IsEnabled" Value="true"/>
+                            <Trigger Property="IsEnabled" Value="false">
+                                <Setter Property="Background" Value="{DynamicResource DisabledBackgroundBrush}" TargetName="Border"/>
+                                <Setter Property="BorderBrush" Value="{DynamicResource DisabledBorderBrush}" TargetName="Border"/>
+                                <Setter Property="Foreground" Value="{DynamicResource DisabledForegroundBrush}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Window.Resources>
     <Window.TaskbarItemInfo>
         <TaskbarItemInfo x:Name="MyTaskItem" ProgressState="Normal">
@@ -1949,16 +2047,18 @@
                     
                 </TextBlock>
                 <Rectangle Fill="#FFBF3517" Grid.Row="0" Grid.RowSpan="8" Grid.Column="0" />
-                <Button Content="groups" Grid.Row="4" Grid.Column="0" Style="{DynamicResource ButtonStyle1}" Margin="3.67,-5.497,46.83,1.996" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Height="14" FontFamily="Gisha" d:LayoutOverrides="VerticalMargin"/>
-                <Button Content="friends" Grid.Row="2" Style="{DynamicResource ButtonStyle1}" Margin="3.67,2.003,34.163,5.496" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Height="14" Grid.RowSpan="2"
-                	Grid.Column="0" FontFamily="Gisha" d:LayoutOverrides="VerticalMargin"/>
-                <Button Content="options" Grid.Row="1" Grid.Column="0" Style="{DynamicResource ButtonStyle1}" Margin="3.67,0,34.163,0" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Height="14" FontFamily="Gisha"/>
+                <Button Content="groups" Grid.Row="3" Grid.Column="0" Style="{DynamicResource ButtonStyle1}" Margin="4,5,47,2" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Height="14" FontFamily="Gisha" Grid.RowSpan="2"/>
+                <Button Content="friends" Grid.Row="2" Style="{DynamicResource ButtonStyle1}" Margin="4,1,34,6" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Height="14" Grid.RowSpan="2"
+                	Grid.Column="0" FontFamily="Gisha"/>
+                <Button Content="options" Grid.Row="1" Grid.Column="0" Style="{DynamicResource ButtonStyle1}" Margin="4,1,34,9" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Height="14" FontFamily="Gisha" Grid.RowSpan="2"/>
                 <Button Content="..." Grid.Row="5" Style="{DynamicResource ButtonStyle2}" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" HorizontalAlignment="Right" Width="39.5" Margin="0,2.837,0,2.163" Grid.RowSpan="2"
                 	Grid.Column="0" />
                 <TextBlock Grid.Row="0" Grid.Column="0" TextWrapping="Wrap" Text="VKMP 2" HorizontalAlignment="Left" Margin="4.226,-2.672,0,4" Foreground="White" FontFamily="Roboto" FontSize="26.667"/>
                 <Button Content="playlist" x:Name="ViziblePlayList" Grid.Row="5" Grid.Column="0"
                 	Style="{DynamicResource ButtonStyle1}" Margin="3.67,-1.997,28.163,-1.337" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Height="14" FontFamily="Gisha" d:LayoutOverrides="VerticalMargin" Click="ViziblePlayList_Click"/>
-                <Button x:Name="CloseApp" Content="" Style="{DynamicResource ButtonStyle12}" Grid.Column="12" HorizontalAlignment="Left" Height="13" Margin="16,4,0,0" VerticalAlignment="Top" Width="12" Click="CloseApp_Click" RenderTransformOrigin="0.472,0.487"/>
+                <Button x:Name="CloseApp" Content="" Style="{DynamicResource ButtonStyle12}" Grid.Column="12" HorizontalAlignment="Left" Height="13" Margin="20,4,0,0" VerticalAlignment="Top" Width="8" Click="CloseApp_Click" RenderTransformOrigin="0.472,0.487"/>
+                <Button x:Name="button1" Content="" Style="{DynamicResource ButtonStyle13}" Grid.Column="12" HorizontalAlignment="Left" Height="13" Margin="10,4,0,0" VerticalAlignment="Top" Width="8" Click="button1_Click" RenderTransformOrigin="0.472,0.487" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="{x:Null}"/>
+                <Button x:Name="minimyz" Content="" Style="{DynamicResource ButtonStyle14}" Grid.Column="12" HorizontalAlignment="Left" Height="13" Margin="0,4,0,0" VerticalAlignment="Top" Width="8" Click="minimyz_Click" RenderTransformOrigin="0.472,0.487" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="{x:Null}"/>
             </Grid>
         </ToolBarPanel>
 
